# murmur3

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md  mk
cmake/: CMakeLists.txt  Murmur3Config.cmake
debian/: README.Debian  README.source  changelog  control  copyright  libmurmur3-dev.dirs  murmur3-dev.install  murmur3.install
doc/: CMakeLists.txt  murmur3.doxy.in  murmur3sum.1
murmur3/: CMakeLists.txt  murmur3.c  murmur3.h  stream.cpp  stream.h  version.c  version.h.in
tests/: CMakeLists.txt  catch_basic.cpp  catch_main.cpp  catch_main.h  catch_stream.cpp  catch_version.cpp  test.c
tools/: CMakeLists.txt  murmur3sum.cpp
